--- a/src/main/resources/templates/product/cardDetails.html
+++ b/src/main/resources/templates/product/cardDetails.html
@@ -82,7 +82,7 @@
 
                         <!-- Botones -->
                         <div class="d-flex justify-content-between mt-4">
-                            <a th:href="@{/product/edit/{id}(id=${prov.id})}" class="btn btn-warning disabled">
+                            <a th:href="@{/product/edit/{id}(id=${prov.id})}" class="btn btn-warning">
                                 <i class="fas fa-edit"></i> Editar
                             </a>
                             <button type="button" class="btn btn-danger" th:attr="data-id=${prov.id}"
