--- a/src/main/resources/templates/product/editFull.html
+++ b/src/main/resources/templates/product/editFull.html
@@ -49,7 +49,7 @@
 
                             <!-- Descripcion -->
                             <div class="row mb-3">
-                                <label for="address" class="col-sm-3 col-form-label"><strong>Descripción:</strong></label>
+                                <label for="description" class="col-sm-3 col-form-label"><strong>Descripción:</strong></label>
                                 <div class="col-sm-9">
                                     <input type="text" class="form-control" id="description" name="description"
                                            th:value="${prod.description}" required>
