--- a/src/main/resources/templates/plantillas/base.html
+++ b/src/main/resources/templates/plantillas/base.html
@@ -47,6 +47,11 @@
                     <li sec:authorize="hasAnyAuthority('ADMIN', 'GERENTE', 'USER')" class="nav-item">
                         <a class="nav-link" th:href="@{/product/}">Products</a>
                     </li>
+
+                    <!-- Roles -->
+                    <li sec:authorize="hasAnyAuthority('ADMIN')" class="nav-item">
+                        <a class="nav-link" th:href="@{/user/}">Usuarios</a>
+                    </li>
 <!--                    <li class="nav-item dropdown">-->
 <!--                        <a class="nav-link dropdown-toggle disabled" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
 <!--                            nothing here yet-->
