--- a/src/main/resources/templates/plantillas/base.html
+++ b/src/main/resources/templates/plantillas/base.html
@@ -52,6 +52,10 @@
                     <li sec:authorize="hasAnyAuthority('ADMIN')" class="nav-item">
                         <a class="nav-link" th:href="@{/user/}">Usuarios</a>
                     </li>
+                    <!-- Tickewts -->
+                    <li sec:authorize="hasAnyAuthority('ADMIN')" class="nav-item">
+                        <a class="nav-link" th:href="@{/ticket/}">Tickets</a>
+                    </li>
 <!--                    <li class="nav-item dropdown">-->
 <!--                        <a class="nav-link dropdown-toggle disabled" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
 <!--                            nothing here yet-->
