--- a/src/main/resources/templates/plantillas/base.html
+++ b/src/main/resources/templates/plantillas/base.html
@@ -36,7 +36,7 @@
 
                 <ul class="navbar-nav me-auto mb-10 mb-lg-0 align-content-end align-content-between">
 <!--                    categorias  [GERENTE, ADMIN, USER] -->
-                    <li sec:authorize= "hasAnyAuthority('ADMIN')" class="nav-item">
+                    <li sec:authorize= "hasAnyAuthority('ADMIN', 'GERENTE')" class="nav-item">
                         <a class="nav-link" th:href="@{/category/}">Categorias</a>
                     </li>
 <!--                    proveedor-->
@@ -44,7 +44,7 @@
                         <a class="nav-link" th:href="@{/proveedor/}">Proveedores</a>
                     </li>
 <!--                    products-->
-                    <li sec:authorize="hasAnyAuthority('ADMIN', 'GERENTE', 'USER')" class="nav-item">
+                    <li sec:authorize="hasAnyAuthority('ADMIN', 'GERENTE')" class="nav-item">
                         <a class="nav-link" th:href="@{/product/}">Products</a>
                     </li>
 
@@ -52,9 +52,13 @@
                     <li sec:authorize="hasAnyAuthority('ADMIN')" class="nav-item">
                         <a class="nav-link" th:href="@{/user/}">Usuarios</a>
                     </li>
-                    <!-- Tickewts -->
-                    <li sec:authorize="hasAnyAuthority('ADMIN')" class="nav-item">
+                    <!-- Tickets -->
+                    <li sec:authorize="hasAnyAuthority('ADMIN', 'GERENTE', 'USER')" class="nav-item">
                         <a class="nav-link" th:href="@{/ticket/}">Tickets</a>
+                    </li>
+                    <!-- reportes -->
+                    <li sec:authorize="hasAnyAuthority('ADMIN', 'GERENTE')" class="nav-item">
+                        <a class="nav-link" th:href="@{/reporte/}">Reportes</a>
                     </li>
 <!--                    <li class="nav-item dropdown">-->
 <!--                        <a class="nav-link dropdown-toggle disabled" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
